WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181740
Do not go to the storage process when registering a service worker client if there is no service worker registered
https://bugs.webkit.org/show_bug.cgi?id=181740
Summary
Do not go to the storage process when registering a service worker client if ...
youenn fablet
Reported
2018-01-17 06:27:53 PST
Do not go to the storage process when registering a service worker client if there is no service worker registered
Attachments
Patch
(19.38 KB, patch)
2018-01-17 06:32 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(19.43 KB, patch)
2018-01-17 06:35 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(20.19 KB, patch)
2018-01-17 07:38 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Working version on top of 181395 without test
(20.85 KB, patch)
2018-01-18 07:27 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(41.63 KB, patch)
2018-01-19 02:33 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(32.90 KB, patch)
2018-01-19 02:46 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(30.31 KB, patch)
2018-01-19 07:49 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Reuploading for EWS
(30.31 KB, patch)
2018-01-19 08:26 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(31.10 KB, patch)
2018-01-19 11:02 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(2.82 MB, application/zip)
2018-01-19 11:55 PST
,
EWS Watchlist
no flags
Details
Fixing resuming case
(31.34 KB, patch)
2018-01-19 12:20 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(9)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-01-17 06:32:50 PST
Created
attachment 331489
[details]
Patch
youenn fablet
Comment 2
2018-01-17 06:35:49 PST
Created
attachment 331490
[details]
Patch
youenn fablet
Comment 3
2018-01-17 07:38:14 PST
Created
attachment 331493
[details]
Patch
youenn fablet
Comment 4
2018-01-18 07:27:05 PST
Created
attachment 331620
[details]
Working version on top of 181395 without test
Radar WebKit Bug Importer
Comment 5
2018-01-19 01:12:31 PST
<
rdar://problem/36650400
>
youenn fablet
Comment 6
2018-01-19 02:33:38 PST
Created
attachment 331719
[details]
Patch
EWS Watchlist
Comment 7
2018-01-19 02:34:47 PST
Attachment 331719
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:144: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:149: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:151: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:156: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:172: Missing spaces around / [whitespace/operators] [3] Total errors found: 5 in 28 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 8
2018-01-19 02:46:34 PST
Created
attachment 331720
[details]
Patch
EWS Watchlist
Comment 9
2018-01-19 02:48:26 PST
Attachment 331720
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:144: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:149: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:151: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:156: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:172: Missing spaces around / [whitespace/operators] [3] Total errors found: 5 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 10
2018-01-19 07:49:59 PST
Created
attachment 331730
[details]
Patch
EWS Watchlist
Comment 11
2018-01-19 07:52:29 PST
Attachment 331730
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:333: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:338: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:340: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:345: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 12
2018-01-19 08:26:44 PST
Created
attachment 331735
[details]
Reuploading for EWS
EWS Watchlist
Comment 13
2018-01-19 08:28:54 PST
Attachment 331735
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:333: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:338: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:340: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:345: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 14
2018-01-19 11:02:12 PST
Created
attachment 331755
[details]
Patch
EWS Watchlist
Comment 15
2018-01-19 11:05:05 PST
Attachment 331755
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:333: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:338: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:340: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:345: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] WARNING: This machine could support 4 simulators, but is only configured for 3. WARNING: Please see <
https://trac.webkit.org/wiki/IncreasingKernelLimits
>. Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 16
2018-01-19 11:55:57 PST
Comment on
attachment 331755
[details]
Patch
Attachment 331755
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6138185
New failing tests: http/tests/workers/service/client-added-to-clients-when-restored-from-page-cache.html
EWS Watchlist
Comment 17
2018-01-19 11:55:59 PST
Created
attachment 331763
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 18
2018-01-19 12:20:15 PST
Created
attachment 331767
[details]
Fixing resuming case
WebKit Commit Bot
Comment 19
2018-01-19 14:58:52 PST
Comment on
attachment 331767
[details]
Fixing resuming case Clearing flags on attachment: 331767 Committed
r227242
: <
https://trac.webkit.org/changeset/227242
>
WebKit Commit Bot
Comment 20
2018-01-19 14:58:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug